--- a/css/style.css
+++ b/css/style.css
@@ -339,13 +339,20 @@ table.customers-table {
   border-collapse: collapse;
   border-style: hidden; }
   table.customers-table td {
+    display: block;
     padding: 2em 1em;
-    border: 1px solid #dce7f7;
     vertical-align: top; }
+  @media (min-width: 1100px) {
+    table.customers-table td {
+      display: table-cell;
+      border: 1px solid #dce7f7; } }
+  table.customers-table td {
+    border-top: 1px solid #dce7f7; }
   table.customers-table h4 {
     text-align: center; }
   table.customers-table ul {
-    list-style: none; }
+    list-style: none;
+    margin-left: 1em; }
     table.customers-table ul li ~ li {
       margin-top: 0; }
     table.customers-table ul li {
